--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <title>Home Page</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=3866580668"/>
-  <link rel="stylesheet" type="text/css" href="css/index.css?crc=4272724082" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/index.css?crc=221500666" id="pagesheet"/>
   <!-- Other scripts -->
   <script type="text/javascript">
    var __adobewebfontsappname__ = "muse";
@@ -27,7 +27,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
    document.write('\x3Cscript src="' + (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//webfonts.creativecloud.com/open-sans:n4,n7:default.js" type="text/javascript">\x3C/script>');
 </script>
   <script type="text/javascript">
-   document.write('\x3Cscript src="' + (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//use.typekit.net/ik/xVKlE2BAiepAU_ozsgzTaGGkBfMxX9jOA5ohiS8jOVGfenjgfO-IbgJGwQMX5QIXw8vDwAwoFR6U5AsKZAmRFRSDZAZq52qajQbujh9DFA485sTKHKoKjAFnSasyZh90ZhBademkiAoTie80ZkozScS0jW9CjcBR-aFXjAi8OciyihU8S1m0-WsTdcS0da41OcBuOYiaikoKjAFnSasyZh90ZhBademkiAoTie80ZkozScS0jW9KfAukSku8jWZ8SkGHfwQpMsMMeMb6MqGIQWmDZZMgKV_t3b9.js" type="text/javascript">\x3C/script>');
+   document.write('\x3Cscript src="' + (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//use.typekit.net/ik/M1fYpwz8unUhLEVQ3dpGFLmQXNvboiZSKCENxC81cRXfenjgfO-IbgJGwQMX5QIXw8vDwAwoFR6U5AsKZAmRFRSDZAZq52qajQbujh9DFA485sTKHKoKjAFnSasyZh90ZhBademkiAoTie80ZkozScS0jW9CjcBR-aFXjAi8OciyihU8S1m0-WsTdcS0da41OcBuOYiaikoKjAFnSasyZh90ZhBademkiAoTie80ZkozScS0jW9KfAukSku8jWZ8SkGHfwQpMsMMeMb6MqGIQWmDZZMga5Wo3b9.js" type="text/javascript">\x3C/script>');
 </script>
   <!-- Other scripts -->
   <script type="text/javascript">
@@ -42,60 +42,62 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
     <p>&nbsp;</p>
    </div>
    <!-- /m_editable -->
-   <div class="PamphletWidget clearfix grpelem" id="pamphletu19757"><!-- none box -->
-    <div class="ThumbGroup clearfix grpelem" id="u19777"><!-- none box -->
-     <div class="popup_anchor" id="u19778popup">
-      <div class="Thumb popup_element clearfix" id="u19778"><!-- column -->
-       <div class="colelem" id="u19779"><!-- simple frame --></div>
-       <div class="colelem" id="u19781"><!-- simple frame --></div>
-       <div class="colelem" id="u19780"><!-- simple frame --></div>
+   <div class="PamphletWidget clearfix grpelem" id="pamphletu22790"><!-- none box -->
+    <div class="ThumbGroup clearfix grpelem" id="u22791"><!-- none box -->
+     <div class="popup_anchor" id="u22792popup">
+      <div class="Thumb popup_element clearfix" id="u22792"><!-- column -->
+       <div class="colelem" id="u22793"><!-- simple frame --></div>
+       <div class="colelem" id="u22794"><!-- simple frame --></div>
+       <div class="colelem" id="u22795"><!-- simple frame --></div>
       </div>
      </div>
     </div>
-    <div class="popup_anchor" id="u19758popup">
-     <div class="ContainerGroup clearfix" id="u19758"><!-- stack box -->
-      <div class="Container invi clearfix grpelem" id="u19759"><!-- column -->
-       <!-- m_editable region-id="editable-static-tag-U19762-BP_infinity" template="index.html" data-type="html" data-ice-options="disableImageResize,link" -->
-       <div class="museBGSize clearfix colelem" id="u19762-3" data-muse-uid="U19762" data-muse-type="txt_frame"><!-- content -->
-        <p>&nbsp;</p>
+    <div class="popup_anchor" id="u22796popup">
+     <div class="ContainerGroup clearfix" id="u22796"><!-- stack box -->
+      <div class="Container invi clearfix grpelem" id="u22797"><!-- column -->
+       <div class="clearfix colelem" id="pu22805-3"><!-- group -->
+        <!-- m_editable region-id="editable-static-tag-U22805-BP_infinity" template="index.html" data-type="html" data-ice-options="disableImageResize,link" -->
+        <div class="museBGSize clearfix grpelem" id="u22805-3" data-muse-uid="U22805" data-muse-type="txt_frame"><!-- content -->
+         <p>&nbsp;</p>
+        </div>
+        <!-- /m_editable -->
+        <!-- m_editable region-id="editable-static-tag-U22802-BP_infinity" template="index.html" data-type="html" data-ice-options="disableImageResize,link,clickable" data-ice-editable="link" -->
+        <a class="nonblock nontext clearfix grpelem" id="u22802-4" href="featured.html" data-href="page:U19221" data-muse-uid="U22802" data-muse-type="txt_frame"><!-- content --><p id="u22802-2">FEATURED</p></a>
+        <!-- /m_editable -->
+        <!-- m_editable region-id="editable-static-tag-U22810-BP_infinity" template="index.html" data-type="html" data-ice-options="disableImageResize,link,clickable" data-ice-editable="link" -->
+        <a class="nonblock nontext clearfix grpelem" id="u22810-4" href="bible-readings.html" data-href="page:U7278" data-muse-uid="U22810" data-muse-type="txt_frame"><!-- content --><p id="u22810-2">READINGS</p></a>
+        <!-- /m_editable -->
+        <!-- m_editable region-id="editable-static-tag-U22798-BP_infinity" template="index.html" data-type="html" data-ice-options="disableImageResize,link,clickable" data-ice-editable="link" -->
+        <a class="nonblock nontext clearfix grpelem" id="u22798-4" href="sermon.html" data-href="page:U5450" data-muse-uid="U22798" data-muse-type="txt_frame"><!-- content --><p id="u22798-2">SERMONS</p></a>
+        <!-- /m_editable -->
+        <!-- m_editable region-id="editable-static-tag-U22806-BP_infinity" template="index.html" data-type="html" data-ice-options="disableImageResize,link,clickable" data-ice-editable="link" -->
+        <a class="nonblock nontext clearfix grpelem" id="u22806-4" href="discipleship.html" data-href="page:U5578" data-muse-uid="U22806" data-muse-type="txt_frame"><!-- content --><p id="u22806-2">DISCIPLESHIP</p></a>
+        <!-- /m_editable -->
+        <!-- m_editable region-id="editable-static-tag-U22801-BP_infinity" template="index.html" data-type="html" data-ice-options="disableImageResize,link,clickable" data-ice-editable="link" -->
+        <a class="nonblock nontext clearfix grpelem" id="u22801-4" href="events.html" data-href="page:U5505" data-muse-uid="U22801" data-muse-type="txt_frame"><!-- content --><p id="u22801-2">EVENTS</p></a>
+        <!-- /m_editable -->
+        <!-- m_editable region-id="editable-static-tag-U22809-BP_infinity" template="index.html" data-type="html" data-ice-options="disableImageResize,link,clickable" data-ice-editable="link" -->
+        <a class="nonblock nontext clearfix grpelem" id="u22809-4" href="openlife.html" data-href="page:U5698" data-muse-uid="U22809" data-muse-type="txt_frame"><!-- content --><p id="u22809-2">OPENLIFE</p></a>
+        <!-- /m_editable -->
        </div>
-       <!-- /m_editable -->
-       <!-- m_editable region-id="editable-static-tag-U19765-BP_infinity" template="index.html" data-type="html" data-ice-options="disableImageResize,link,clickable" data-ice-editable="link" -->
-       <a class="nonblock nontext clearfix colelem" id="u19765-4" href="bible-readings.html" data-href="page:U7278" data-muse-uid="U19765" data-muse-type="txt_frame"><!-- content --><p id="u19765-2">READINGS</p></a>
-       <!-- /m_editable -->
-       <!-- m_editable region-id="editable-static-tag-U19760-BP_infinity" template="index.html" data-type="html" data-ice-options="disableImageResize,link,clickable" data-ice-editable="link" -->
-       <a class="nonblock nontext clearfix colelem" id="u19760-4" href="sermon.html" data-href="page:U5450" data-muse-uid="U19760" data-muse-type="txt_frame"><!-- content --><p id="u19760-2">SERMONS</p></a>
-       <!-- /m_editable -->
-       <!-- m_editable region-id="editable-static-tag-U19761-BP_infinity" template="index.html" data-type="html" data-ice-options="disableImageResize,link,clickable" data-ice-editable="link" -->
-       <a class="nonblock nontext clearfix colelem" id="u19761-4" href="discipleship.html" data-href="page:U5578" data-muse-uid="U19761" data-muse-type="txt_frame"><!-- content --><p id="u19761-2">DISCIPLESHIP</p></a>
-       <!-- /m_editable -->
-       <!-- m_editable region-id="editable-static-tag-U19764-BP_infinity" template="index.html" data-type="html" data-ice-options="disableImageResize,link,clickable" data-ice-editable="link" -->
-       <a class="nonblock nontext clearfix colelem" id="u19764-4" href="events.html" data-href="page:U5505" data-muse-uid="U19764" data-muse-type="txt_frame"><!-- content --><p id="u19764-2">EVENTS</p></a>
-       <!-- /m_editable -->
-       <!-- m_editable region-id="editable-static-tag-U19763-BP_infinity" template="index.html" data-type="html" data-ice-options="disableImageResize,link,clickable" data-ice-editable="link" -->
-       <a class="nonblock nontext clearfix colelem" id="u19763-4" href="openlife.html" data-href="page:U5698" data-muse-uid="U19763" data-muse-type="txt_frame"><!-- content --><p id="u19763-2">OPENLIFE</p></a>
-       <!-- /m_editable -->
-       <!-- m_editable region-id="editable-static-tag-U19766-BP_infinity" template="index.html" data-type="html" data-ice-options="disableImageResize,link,clickable" data-ice-editable="link" -->
-       <a class="nonblock nontext clearfix colelem" id="u19766-4" href="featured.html" data-href="page:U19221" data-muse-uid="U19766" data-muse-type="txt_frame"><!-- content --><p id="u19766-2">FEATURED</p></a>
-       <!-- /m_editable -->
-       <div class="clearfix colelem" id="pu19767"><!-- group -->
-        <!-- m_editable region-id="editable-static-tag-U19767-BP_infinity" template="index.html" data-type="html" data-ice-options="clickable" data-ice-editable="link" -->
-        <a class="nonblock nontext clip_frame grpelem" id="u19767" href="http://gawleruniting.org.au" data-muse-uid="U19767"><!-- svg --><img class="svg" id="u19768" src="images/pasted-svg-109665x109.svg?crc=3939634654" alt="" data-mu-svgfallback="images/pasted%20svg%20109665x109_poster_.png?crc=4011030576" data-image-width="60" data-image-height="60"/></a>
+       <div class="clearfix colelem" id="pu22803"><!-- group -->
+        <!-- m_editable region-id="editable-static-tag-U22803-BP_infinity" template="index.html" data-type="html" data-ice-options="clickable" data-ice-editable="link" -->
+        <a class="nonblock nontext clip_frame grpelem" id="u22803" href="http://gawleruniting.org.au" data-muse-uid="U22803"><!-- svg --><img class="svg" id="u22804" src="images/pasted-svg-109665x109.svg?crc=3939634654" alt="" data-mu-svgfallback="images/pasted%20svg%20109665x109_poster_.png?crc=4011030576" data-image-width="60" data-image-height="60"/></a>
         <!-- /m_editable -->
-        <!-- m_editable region-id="editable-static-tag-U19771-BP_infinity" template="index.html" data-type="html" data-ice-options="clickable" data-ice-editable="link" -->
-        <a class="nonblock nontext clip_frame grpelem" id="u19771" href="https://www.facebook.com/gawlerunitingchurch" data-muse-uid="U19771"><!-- svg --><img class="svg" id="u19772" src="images/pasted-svg-109665x1092.svg?crc=223350899" alt="" data-mu-svgfallback="images/pasted%20svg%20109665x109_poster_2.png?crc=4111301327" data-image-width="60" data-image-height="60"/></a>
+        <!-- m_editable region-id="editable-static-tag-U22807-BP_infinity" template="index.html" data-type="html" data-ice-options="clickable" data-ice-editable="link" -->
+        <a class="nonblock nontext clip_frame grpelem" id="u22807" href="https://www.facebook.com/gawlerunitingchurch" data-muse-uid="U22807"><!-- svg --><img class="svg" id="u22808" src="images/pasted-svg-109665x1092.svg?crc=223350899" alt="" data-mu-svgfallback="images/pasted%20svg%20109665x109_poster_2.png?crc=4111301327" data-image-width="60" data-image-height="60"/></a>
         <!-- /m_editable -->
-        <!-- m_editable region-id="editable-static-tag-U19769-BP_infinity" template="index.html" data-type="html" data-ice-options="clickable" data-ice-editable="link" -->
-        <a class="nonblock nontext clip_frame grpelem" id="u19769" href="tel:(08)85225269" data-muse-uid="U19769"><!-- svg --><img class="svg" id="u19770" src="images/pasted-svg-109665x1093.svg?crc=4186153669" alt="" data-mu-svgfallback="images/pasted%20svg%20109665x109_poster_3.png?crc=4204566227" data-image-width="60" data-image-height="60"/></a>
+        <!-- m_editable region-id="editable-static-tag-U22799-BP_infinity" template="index.html" data-type="html" data-ice-options="clickable" data-ice-editable="link" -->
+        <a class="nonblock nontext clip_frame grpelem" id="u22799" href="tel:(08)85225269" data-muse-uid="U22799"><!-- svg --><img class="svg" id="u22800" src="images/pasted-svg-109665x1093.svg?crc=4186153669" alt="" data-mu-svgfallback="images/pasted%20svg%20109665x109_poster_3.png?crc=4204566227" data-image-width="60" data-image-height="60"/></a>
         <!-- /m_editable -->
        </div>
       </div>
      </div>
     </div>
-    <div class="popup_anchor" id="u19774popup">
-     <div class="PamphletCloseButton PamphletLightboxPart popup_element clearfix" id="u19774"><!-- group -->
-      <div class="grpelem" id="u19776" data-mu-ie-matrix="progid:DXImageTransform.Microsoft.Matrix(M11=0.7071,M12=0.7071,M21=-0.7071,M22=0.7071,SizingMethod='auto expand')" data-mu-ie-matrix-dx="3" data-mu-ie-matrix-dy="-9"><!-- simple frame --></div>
-      <div class="grpelem" id="u19775" data-mu-ie-matrix="progid:DXImageTransform.Microsoft.Matrix(M11=0.7071,M12=-0.7071,M21=0.7071,M22=0.7071,SizingMethod='auto expand')" data-mu-ie-matrix-dx="3" data-mu-ie-matrix-dy="-9"><!-- simple frame --></div>
+    <div class="popup_anchor" id="u22812popup">
+     <div class="PamphletCloseButton PamphletLightboxPart popup_element clearfix" id="u22812"><!-- group -->
+      <div class="grpelem" id="u22813" data-mu-ie-matrix="progid:DXImageTransform.Microsoft.Matrix(M11=0.7071,M12=0.7071,M21=-0.7071,M22=0.7071,SizingMethod='auto expand')" data-mu-ie-matrix-dx="3" data-mu-ie-matrix-dy="-9"><!-- simple frame --></div>
+      <div class="grpelem" id="u22814" data-mu-ie-matrix="progid:DXImageTransform.Microsoft.Matrix(M11=0.7071,M12=-0.7071,M21=0.7071,M22=0.7071,SizingMethod='auto expand')" data-mu-ie-matrix-dx="3" data-mu-ie-matrix-dy="-9"><!-- simple frame --></div>
      </div>
     </div>
    </div>
@@ -121,7 +123,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
     <h1>Becoming all God created you to be</h1>
    </div>
    <!-- /m_editable -->
-   <div class="verticalspacer" data-offset-top="718" data-content-above-spacer="718" data-content-below-spacer="0"></div>
+   <div class="verticalspacer" data-offset-top="381" data-content-above-spacer="718" data-content-below-spacer="336"></div>
   </div>
   <!-- Other scripts -->
   <script type="text/javascript">
@@ -136,7 +138,7 @@ Muse.Utils.prepHyperlinks(true);/* body */
 Muse.Utils.resizeHeight('.browser_width');/* resize height */
 Muse.Utils.requestAnimationFrame(function() { $('body').addClass('initialized'); });/* mark body as initialized */
 Muse.Utils.fullPage('#page');/* 100% height page */
-Muse.Utils.initWidget('#pamphletu19757', ['#bp_infinity'], function(elem) { return new WebPro.Widget.ContentSlideShow(elem, {contentLayout_runtime:'stack',event:'click',deactivationEvent:'mouseout_both',autoPlay:false,displayInterval:3000,transitionStyle:'fading',transitionDuration:500,hideAllContentsFirst:true,shuffle:false,enableSwipe:true,resumeAutoplay:true,resumeAutoplayInterval:3000,playOnce:false,autoActivate_runtime:false}); });/* #pamphletu19757 */
+Muse.Utils.initWidget('#pamphletu22790', ['#bp_infinity'], function(elem) { return new WebPro.Widget.ContentSlideShow(elem, {contentLayout_runtime:'stack',event:'click',deactivationEvent:'mouseout_click',autoPlay:false,displayInterval:3000,transitionStyle:'fading',transitionDuration:500,hideAllContentsFirst:true,shuffle:false,enableSwipe:true,resumeAutoplay:true,resumeAutoplayInterval:3000,playOnce:false,autoActivate_runtime:false}); });/* #pamphletu22790 */
 Muse.Utils.showWidgetsWhenReady();/* body */
 Muse.Utils.transformMarkupToFixBrowserProblems();/* body */
 }catch(b){if(b&&"function"==typeof b.notify?b.notify():Muse.Assert.fail("Error calling selector function: "+b),false)throw b;}})})};
