--- a/keys-to-discipleship.html
+++ b/keys-to-discipleship.html
@@ -17,12 +17,12 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <title>Keys to Discipleship</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=3866580668"/>
-  <link rel="stylesheet" type="text/css" href="css/master_master.css?crc=514636540"/>
-  <link rel="stylesheet" type="text/css" href="css/keys-to-discipleship.css?crc=516118904" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_master.css?crc=338000515"/>
+  <link rel="stylesheet" type="text/css" href="css/keys-to-discipleship.css?crc=4053548157" id="pagesheet"/>
   <!-- IE-only CSS -->
   <!--[if lt IE 9]>
   <link rel="stylesheet" type="text/css" href="css/nomq_preview_master_master.css?crc=3824530138"/>
-  <link rel="stylesheet" type="text/css" href="css/nomq_keys-to-discipleship.css?crc=414352051" id="nomq_pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/nomq_keys-to-discipleship.css?crc=4256035595" id="nomq_pagesheet"/>
   <![endif]-->
   <!-- Other scripts -->
   <script type="text/javascript">
@@ -33,7 +33,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
    document.write('\x3Cscript src="' + (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//webfonts.creativecloud.com/open-sans:n4:default;abel:n4:default.js" type="text/javascript">\x3C/script>');
 </script>
   <script type="text/javascript">
-   document.write('\x3Cscript src="' + (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//use.typekit.net/ik/wGrmQ3oeNL5FQMKqtcJ_L-oiJ-BC60qWtLPmF35N_S9fenjgfO-IbgJGwQMX5QIXw8vDwAwoFR6U5AsKZAmRFRSDZAZq52qajQbujh9DFA485sTKHKoKjAFnSasyZh90ZhBademkiAoTie80ZkozScS0jW9CjcBR-aFXjAi8OciyihU8S1m0-WsTdcS0da41OcBuOYiaikoKjAFnSasyZh90ZhBademkiAoTie80ZkozScS0jW9KfAZTScIlShB0SkGHfFczMsMMeMb6MqGIQWmDZZMgGL_t3b9.js" type="text/javascript">\x3C/script>');
+   document.write('\x3Cscript src="' + (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//use.typekit.net/ik/VWIaDJyi6j-rvvuzrvtVqrX6V42XX86cblvM7g7uDB6fenjgfO-IbgJGwQMX5QIXw8vDwAwoFR6U5AsKZAmRFRSDZAZq52qajQbujh9DFA485sTKHKoKjAFnSasyZh90ZhBademkiAoTie80ZkozScS0jW9CjcBR-aFXjAi8OciyihU8S1m0-WsTdcS0da41OcBuOYiaikoKjAFnSasyZh90ZhBademkiAoTie80ZkozScS0jW9KfAZTScIlShB0SkGHfFczMsMMeMb6MqGIQWmDZZMgNpWo3b9.js" type="text/javascript">\x3C/script>');
 </script>
   <!-- Other scripts -->
   <script type="text/javascript">
@@ -56,20 +56,24 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      </div>
      <div class="popup_anchor" id="u20403popup">
       <div class="ContainerGroup clearfix" id="u20403"><!-- stack box -->
-       <div class="Container invi clearfix grpelem" id="u20404"><!-- column -->
-        <div class="museBGSize clearfix colelem shared_content" id="u20416-3" data-content-guid="u20416-3_content"><!-- content -->
-         <p>&nbsp;</p>
+       <div class="Container invi clearfix grpelem" id="u20404"><!-- group -->
+        <div class="clearfix grpelem shared_content" id="pu20416-3" data-content-guid="pu20416-3_content"><!-- column -->
+         <div class="museBGSize clearfix colelem" id="u20416-3"><!-- content -->
+          <p>&nbsp;</p>
+         </div>
+         <a class="nonblock nontext clearfix colelem" id="u22578-4" href="featured.html" data-href="page:U19221"><!-- content --><p id="u22578-2">FEATURED</p></a>
+         <a class="nonblock nontext clip_frame colelem" id="u20414" href="http://gawleruniting.org.au"><!-- svg --><img class="svg temp_no_img_src" id="u20415" data-orig-src="images/pasted-svg-109665x109.svg?crc=3939634654" alt="" data-mu-svgfallback="images/pasted%20svg%20109665x109_poster_.png?crc=4011030576" data-image-width="60" data-image-height="60" src="images/blank.gif?crc=4208392903"/></a>
         </div>
-        <a class="nonblock nontext clearfix colelem shared_content" id="u20408-4" href="bible-readings.html" data-href="page:U7278" data-content-guid="u20408-4_content"><!-- content --><p id="u20408-2">READINGS</p></a>
-        <a class="nonblock nontext clearfix colelem shared_content" id="u20410-4" href="sermon.html" data-href="page:U5450" data-content-guid="u20410-4_content"><!-- content --><p id="u20410-2">SERMONS</p></a>
-        <a class="nonblock nontext clearfix colelem shared_content" id="u20417-4" href="discipleship.html" data-href="page:U5578" data-content-guid="u20417-4_content"><!-- content --><p id="u20417-2">DISCIPLESHIP</p></a>
-        <a class="nonblock nontext clearfix colelem shared_content" id="u20411-4" href="events.html" data-href="page:U5505" data-content-guid="u20411-4_content"><!-- content --><p id="u20411-2">EVENTS</p></a>
-        <a class="nonblock nontext clearfix colelem shared_content" id="u20405-4" href="openlife.html" data-href="page:U5698" data-content-guid="u20405-4_content"><!-- content --><p id="u20405-2">OPENLIFE</p></a>
-        <a class="nonblock nontext clearfix colelem shared_content" id="u20409-4" href="featured.html" data-href="page:U19221" data-content-guid="u20409-4_content"><!-- content --><p id="u20409-2">FEATURED</p></a>
-        <div class="clearfix colelem shared_content" id="pu20414" data-content-guid="pu20414_content"><!-- group -->
-         <a class="nonblock nontext clip_frame grpelem" id="u20414" href="http://gawleruniting.org.au"><!-- svg --><img class="svg temp_no_img_src" id="u20415" data-orig-src="images/pasted-svg-109665x109.svg?crc=3939634654" alt="" data-mu-svgfallback="images/pasted%20svg%20109665x109_poster_.png?crc=4011030576" data-image-width="60" data-image-height="60" src="images/blank.gif?crc=4208392903"/></a>
-         <a class="nonblock nontext clip_frame grpelem" id="u20406" href="https://www.facebook.com/gawlerunitingchurch"><!-- svg --><img class="svg temp_no_img_src" id="u20407" data-orig-src="images/pasted-svg-109665x1092.svg?crc=223350899" alt="" data-mu-svgfallback="images/pasted%20svg%20109665x109_poster_2.png?crc=4111301327" data-image-width="60" data-image-height="60" src="images/blank.gif?crc=4208392903"/></a>
-         <a class="nonblock nontext clip_frame grpelem" id="u20412" href="tel:(08)85225269"><!-- svg --><img class="svg temp_no_img_src" id="u20413" data-orig-src="images/pasted-svg-109665x1093.svg?crc=4186153669" alt="" data-mu-svgfallback="images/pasted%20svg%20109665x109_poster_3.png?crc=4204566227" data-image-width="60" data-image-height="60" src="images/blank.gif?crc=4208392903"/></a>
+        <a class="nonblock nontext clearfix grpelem shared_content" id="u20408-4" href="bible-readings.html" data-href="page:U7278" data-content-guid="u20408-4_content"><!-- content --><p id="u20408-2">READINGS</p></a>
+        <div class="clearfix grpelem shared_content" id="pu22548-4" data-content-guid="pu22548-4_content"><!-- column -->
+         <a class="nonblock nontext clearfix colelem" id="u22548-4" href="sermon.html" data-href="page:U5450"><!-- content --><p id="u22548-2">SERMONS</p></a>
+         <a class="nonblock nontext clearfix colelem" id="u22554-4" href="discipleship.html" data-href="page:U5578"><!-- content --><p id="u22554-2">DISCIPLESHIP</p></a>
+         <a class="nonblock nontext clearfix colelem" id="u22560-4" href="events.html" data-href="page:U5505"><!-- content --><p id="u22560-2">EVENTS</p></a>
+         <a class="nonblock nontext clearfix colelem" id="u22572-4" href="openlife.html" data-href="page:U5698"><!-- content --><p id="u22572-2">OPENLIFE</p></a>
+         <div class="clearfix colelem" id="pu20406"><!-- group -->
+          <a class="nonblock nontext clip_frame grpelem" id="u20406" href="https://www.facebook.com/gawlerunitingchurch"><!-- svg --><img class="svg temp_no_img_src" id="u20407" data-orig-src="images/pasted-svg-109665x1092.svg?crc=223350899" alt="" data-mu-svgfallback="images/pasted%20svg%20109665x109_poster_2.png?crc=4111301327" data-image-width="60" data-image-height="60" src="images/blank.gif?crc=4208392903"/></a>
+          <a class="nonblock nontext clip_frame grpelem" id="u20412" href="tel:(08)85225269"><!-- svg --><img class="svg temp_no_img_src" id="u20413" data-orig-src="images/pasted-svg-109665x1093.svg?crc=4186153669" alt="" data-mu-svgfallback="images/pasted%20svg%20109665x109_poster_3.png?crc=4204566227" data-image-width="60" data-image-height="60" src="images/blank.gif?crc=4208392903"/></a>
+         </div>
         </div>
        </div>
       </div>
@@ -90,12 +94,10 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      <div class="colelem" id="u6188"><!-- simple frame --></div>
     </div>
     <div class="verticalspacer" data-offset-top="77" data-content-above-spacer="88" data-content-below-spacer="81"></div>
-    <div class="rounded-corners clearfix grpelem shared_content" id="u5290-4" data-content-guid="u5290-4_content"><!-- content -->
-     <p id="u5290-2">RETURN HOME</p>
-    </div>
+    <a class="nonblock nontext rounded-corners clearfix grpelem shared_content" id="u5290-4" href="index.html" data-href="page:U782" data-content-guid="u5290-4_content"><!-- content --><p id="u5290-2">RETURN HOME</p></a>
    </div>
   </div>
-  <div class="breakpoint" id="bp_430" data-min-width="381" data-max-width="430"><!-- responsive breakpoint node -->
+  <div class="breakpoint" id="bp_430" data-max-width="430"><!-- responsive breakpoint node -->
    <div class="clearfix borderbox temp_no_id" data-orig-id="page"><!-- group -->
     <div class="PamphletWidget clearfix grpelem temp_no_id" data-orig-id="pamphletu20396"><!-- none box -->
      <div class="ThumbGroup clearfix grpelem temp_no_id" data-orig-id="u20398"><!-- none box -->
@@ -109,15 +111,10 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      </div>
      <div class="popup_anchor temp_no_id" data-orig-id="u20403popup">
       <div class="ContainerGroup clearfix temp_no_id" data-orig-id="u20403"><!-- stack box -->
-       <div class="Container invi clearfix grpelem temp_no_id" data-orig-id="u20404"><!-- column -->
-        <span class="museBGSize clearfix colelem placeholder" data-placeholder-for="u20416-3_content"><!-- placeholder node --></span>
-        <span class="nonblock nontext clearfix colelem placeholder" data-placeholder-for="u20408-4_content"><!-- placeholder node --></span>
-        <span class="nonblock nontext clearfix colelem placeholder" data-placeholder-for="u20410-4_content"><!-- placeholder node --></span>
-        <span class="nonblock nontext clearfix colelem placeholder" data-placeholder-for="u20417-4_content"><!-- placeholder node --></span>
-        <span class="nonblock nontext clearfix colelem placeholder" data-placeholder-for="u20411-4_content"><!-- placeholder node --></span>
-        <span class="nonblock nontext clearfix colelem placeholder" data-placeholder-for="u20405-4_content"><!-- placeholder node --></span>
-        <span class="nonblock nontext clearfix colelem placeholder" data-placeholder-for="u20409-4_content"><!-- placeholder node --></span>
-        <span class="clearfix colelem placeholder" data-placeholder-for="pu20414_content"><!-- placeholder node --></span>
+       <div class="Container invi clearfix grpelem temp_no_id" data-orig-id="u20404"><!-- group -->
+        <span class="clearfix grpelem placeholder" data-placeholder-for="pu20416-3_content"><!-- placeholder node --></span>
+        <span class="nonblock nontext clearfix grpelem placeholder" data-placeholder-for="u20408-4_content"><!-- placeholder node --></span>
+        <span class="clearfix grpelem placeholder" data-placeholder-for="pu22548-4_content"><!-- placeholder node --></span>
        </div>
       </div>
      </div>
@@ -129,46 +126,8 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      </div>
     </div>
     <span class="clearfix grpelem placeholder" data-placeholder-for="pu18792-4_content"><!-- placeholder node --></span>
-    <div class="verticalspacer shared_content" data-offset-top="71" data-content-above-spacer="88" data-content-below-spacer="81" data-content-guid="page_2_content"></div>
-    <span class="rounded-corners clearfix grpelem placeholder" data-placeholder-for="u5290-4_content"><!-- placeholder node --></span>
-   </div>
-  </div>
-  <div class="breakpoint" id="bp_380" data-max-width="380"><!-- responsive breakpoint node -->
-   <div class="clearfix borderbox temp_no_id" data-orig-id="page"><!-- group -->
-    <div class="PamphletWidget clearfix grpelem temp_no_id" data-orig-id="pamphletu20396"><!-- none box -->
-     <div class="ThumbGroup clearfix grpelem temp_no_id" data-orig-id="u20398"><!-- none box -->
-      <div class="popup_anchor temp_no_id" data-orig-id="u20399popup">
-       <div class="Thumb popup_element clearfix temp_no_id" data-orig-id="u20399"><!-- column -->
-        <span class="colelem placeholder" data-placeholder-for="u20401_content"><!-- placeholder node --></span>
-        <span class="colelem placeholder" data-placeholder-for="u20402_content"><!-- placeholder node --></span>
-        <span class="colelem placeholder" data-placeholder-for="u20400_content"><!-- placeholder node --></span>
-       </div>
-      </div>
-     </div>
-     <div class="popup_anchor temp_no_id" data-orig-id="u20403popup">
-      <div class="ContainerGroup clearfix temp_no_id" data-orig-id="u20403"><!-- stack box -->
-       <div class="Container invi clearfix grpelem temp_no_id" data-orig-id="u20404"><!-- column -->
-        <span class="clearfix colelem placeholder" data-placeholder-for="u20416-3_content"><!-- placeholder node --></span>
-        <span class="nonblock nontext clearfix colelem placeholder" data-placeholder-for="u20408-4_content"><!-- placeholder node --></span>
-        <span class="nonblock nontext clearfix colelem placeholder" data-placeholder-for="u20410-4_content"><!-- placeholder node --></span>
-        <span class="nonblock nontext clearfix colelem placeholder" data-placeholder-for="u20417-4_content"><!-- placeholder node --></span>
-        <span class="nonblock nontext clearfix colelem placeholder" data-placeholder-for="u20411-4_content"><!-- placeholder node --></span>
-        <span class="nonblock nontext clearfix colelem placeholder" data-placeholder-for="u20405-4_content"><!-- placeholder node --></span>
-        <span class="nonblock nontext clearfix colelem placeholder" data-placeholder-for="u20409-4_content"><!-- placeholder node --></span>
-        <span class="clearfix colelem placeholder" data-placeholder-for="pu20414_content"><!-- placeholder node --></span>
-       </div>
-      </div>
-     </div>
-     <div class="popup_anchor temp_no_id" data-orig-id="u20418popup">
-      <div class="PamphletCloseButton PamphletLightboxPart popup_element clearfix temp_no_id" data-orig-id="u20418"><!-- group -->
-       <span class="grpelem placeholder" data-placeholder-for="u20419_content"><!-- placeholder node --></span>
-       <span class="grpelem placeholder" data-placeholder-for="u20420_content"><!-- placeholder node --></span>
-      </div>
-     </div>
-    </div>
-    <span class="clearfix grpelem placeholder" data-placeholder-for="pu18792-4_content"><!-- placeholder node --></span>
-    <span class="verticalspacer placeholder" data-placeholder-for="page_2_content"><!-- placeholder node --></span>
-    <span class="clearfix grpelem placeholder" data-placeholder-for="u5290-4_content"><!-- placeholder node --></span>
+    <div class="verticalspacer" data-offset-top="71" data-content-above-spacer="88" data-content-below-spacer="80"></div>
+    <span class="nonblock nontext rounded-corners clearfix grpelem placeholder" data-placeholder-for="u5290-4_content"><!-- placeholder node --></span>
    </div>
   </div>
   <!-- Other scripts -->
@@ -182,7 +141,7 @@ window.Muse.assets.check($);/* body */
 Muse.Utils.transformMarkupToFixBrowserProblemsPreInit();/* body */
 Muse.Utils.prepHyperlinks(true);/* body */
 Muse.Utils.fullPage('#page');/* 100% height page */
-Muse.Utils.initWidget('#pamphletu20396', ['#bp_infinity', '#bp_430', '#bp_380'], function(elem) { return new WebPro.Widget.ContentSlideShow(elem, {contentLayout_runtime:'stack',event:'click',deactivationEvent:'mouseout_both',autoPlay:false,displayInterval:3000,transitionStyle:'fading',transitionDuration:500,hideAllContentsFirst:true,shuffle:false,enableSwipe:true,resumeAutoplay:true,resumeAutoplayInterval:3000,playOnce:false,autoActivate_runtime:false}); });/* #pamphletu20396 */
+Muse.Utils.initWidget('#pamphletu20396', ['#bp_infinity', '#bp_430'], function(elem) { return new WebPro.Widget.ContentSlideShow(elem, {contentLayout_runtime:'stack',event:'click',deactivationEvent:'mouseout_trigger',autoPlay:false,displayInterval:3000,transitionStyle:'fading',transitionDuration:500,hideAllContentsFirst:true,shuffle:false,enableSwipe:true,resumeAutoplay:true,resumeAutoplayInterval:3000,playOnce:false,autoActivate_runtime:false}); });/* #pamphletu20396 */
 $( '.breakpoint' ).registerBreakpoint();/* Register breakpoints */
 Muse.Utils.transformMarkupToFixBrowserProblems();/* body */
 }catch(b){if(b&&"function"==typeof b.notify?b.notify():Muse.Assert.fail("Error calling selector function: "+b),false)throw b;}})})};
