--- a/sermon.html
+++ b/sermon.html
@@ -17,8 +17,8 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <title>Sermon</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=3866580668"/>
-  <link rel="stylesheet" type="text/css" href="css/master_master.css?crc=514636540"/>
-  <link rel="stylesheet" type="text/css" href="css/sermon.css?crc=104692464" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_master.css?crc=338000515"/>
+  <link rel="stylesheet" type="text/css" href="css/sermon.css?crc=442056850" id="pagesheet"/>
   <!-- Other scripts -->
   <script type="text/javascript">
    var __adobewebfontsappname__ = "muse";
@@ -28,7 +28,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
    document.write('\x3Cscript src="' + (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//webfonts.creativecloud.com/open-sans:n4:default;abel:n4:default.js" type="text/javascript">\x3C/script>');
 </script>
   <script type="text/javascript">
-   document.write('\x3Cscript src="' + (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//use.typekit.net/ik/-5NuE9cE2fYemDAguMO9F5xECqq2gDV7y66AudfWtrwfenjgfO-IbgJGwQMX5QIXw8vDwAwoFR6U5AsKZAmRFRSDZAZq52qajQbujh9DFA485sTKHKoKjAFnSasyZh90ZhBademkiAoTie80ZkozScS0jW9CjcBR-aFXjAi8OciyihU8S1m0-WsTdcS0da41OcBuOYiaikoKjAFnSasyZh90ZhBademkiAoTie80ZkozScS0jW9KfAZTScIlShB0SkGHfFczMsMMeMb6MqGIQWmDZZMgRV_t3b9.js" type="text/javascript">\x3C/script>');
+   document.write('\x3Cscript src="' + (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//use.typekit.net/ik/NYQ2CYabLs68CpXB9AVdi65WKMJZcp22cONvZtM42xCfenjgfO-IbgJGwQMX5QIXw8vDwAwoFR6U5AsKZAmRFRSDZAZq52qajQbujh9DFA485sTKHKoKjAFnSasyZh90ZhBademkiAoTie80ZkozScS0jW9CjcBR-aFXjAi8OciyihU8S1m0-WsTdcS0da41OcBuOYiaikoKjAFnSasyZh90ZhBademkiAoTie80ZkozScS0jW9KfAZTScIlShB0SkGHfFczMsMMeMb6MqGIQWmDZZMga0Wo3b9.js" type="text/javascript">\x3C/script>');
 </script>
   <!-- Other scripts -->
   <script type="text/javascript">
@@ -50,20 +50,24 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
     </div>
     <div class="popup_anchor" id="u20403popup">
      <div class="ContainerGroup clearfix" id="u20403"><!-- stack box -->
-      <div class="Container invi clearfix grpelem" id="u20404"><!-- column -->
-       <div class="museBGSize clearfix colelem" id="u20416-3"><!-- content -->
-        <p>&nbsp;</p>
+      <div class="Container invi clearfix grpelem" id="u20404"><!-- group -->
+       <div class="clearfix grpelem" id="pu20416-3"><!-- column -->
+        <div class="museBGSize clearfix colelem" id="u20416-3"><!-- content -->
+         <p>&nbsp;</p>
+        </div>
+        <a class="nonblock nontext clearfix colelem" id="u22578-4" href="featured.html" data-href="page:U19221"><!-- content --><p id="u22578-2">FEATURED</p></a>
+        <a class="nonblock nontext clip_frame colelem" id="u20414" href="http://gawleruniting.org.au"><!-- svg --><img class="svg" id="u20415" src="images/pasted-svg-109665x109.svg?crc=3939634654" alt="" data-mu-svgfallback="images/pasted%20svg%20109665x109_poster_.png?crc=4011030576" data-image-width="60" data-image-height="60"/></a>
        </div>
-       <a class="nonblock nontext clearfix colelem" id="u20408-4" href="bible-readings.html" data-href="page:U7278"><!-- content --><p id="u20408-2">READINGS</p></a>
-       <a class="nonblock nontext MuseLinkActive clearfix colelem" id="u20410-4" href="sermon.html" data-href="page:U5450"><!-- content --><p id="u20410-2">SERMONS</p></a>
-       <a class="nonblock nontext clearfix colelem" id="u20417-4" href="discipleship.html" data-href="page:U5578"><!-- content --><p id="u20417-2">DISCIPLESHIP</p></a>
-       <a class="nonblock nontext clearfix colelem" id="u20411-4" href="events.html" data-href="page:U5505"><!-- content --><p id="u20411-2">EVENTS</p></a>
-       <a class="nonblock nontext clearfix colelem" id="u20405-4" href="openlife.html" data-href="page:U5698"><!-- content --><p id="u20405-2">OPENLIFE</p></a>
-       <a class="nonblock nontext clearfix colelem" id="u20409-4" href="featured.html" data-href="page:U19221"><!-- content --><p id="u20409-2">FEATURED</p></a>
-       <div class="clearfix colelem" id="pu20414"><!-- group -->
-        <a class="nonblock nontext clip_frame grpelem" id="u20414" href="http://gawleruniting.org.au"><!-- svg --><img class="svg" id="u20415" src="images/pasted-svg-109665x109.svg?crc=3939634654" alt="" data-mu-svgfallback="images/pasted%20svg%20109665x109_poster_.png?crc=4011030576" data-image-width="60" data-image-height="60"/></a>
-        <a class="nonblock nontext clip_frame grpelem" id="u20406" href="https://www.facebook.com/gawlerunitingchurch"><!-- svg --><img class="svg" id="u20407" src="images/pasted-svg-109665x1092.svg?crc=223350899" alt="" data-mu-svgfallback="images/pasted%20svg%20109665x109_poster_2.png?crc=4111301327" data-image-width="60" data-image-height="60"/></a>
-        <a class="nonblock nontext clip_frame grpelem" id="u20412" href="tel:(08)85225269"><!-- svg --><img class="svg" id="u20413" src="images/pasted-svg-109665x1093.svg?crc=4186153669" alt="" data-mu-svgfallback="images/pasted%20svg%20109665x109_poster_3.png?crc=4204566227" data-image-width="60" data-image-height="60"/></a>
+       <a class="nonblock nontext clearfix grpelem" id="u20408-4" href="bible-readings.html" data-href="page:U7278"><!-- content --><p id="u20408-2">READINGS</p></a>
+       <div class="clearfix grpelem" id="pu22548-4"><!-- column -->
+        <a class="nonblock nontext MuseLinkActive clearfix colelem" id="u22548-4" href="sermon.html" data-href="page:U5450"><!-- content --><p id="u22548-2">SERMONS</p></a>
+        <a class="nonblock nontext clearfix colelem" id="u22554-4" href="discipleship.html" data-href="page:U5578"><!-- content --><p id="u22554-2">DISCIPLESHIP</p></a>
+        <a class="nonblock nontext clearfix colelem" id="u22560-4" href="events.html" data-href="page:U5505"><!-- content --><p id="u22560-2">EVENTS</p></a>
+        <a class="nonblock nontext clearfix colelem" id="u22572-4" href="openlife.html" data-href="page:U5698"><!-- content --><p id="u22572-2">OPENLIFE</p></a>
+        <div class="clearfix colelem" id="pu20406"><!-- group -->
+         <a class="nonblock nontext clip_frame grpelem" id="u20406" href="https://www.facebook.com/gawlerunitingchurch"><!-- svg --><img class="svg" id="u20407" src="images/pasted-svg-109665x1092.svg?crc=223350899" alt="" data-mu-svgfallback="images/pasted%20svg%20109665x109_poster_2.png?crc=4111301327" data-image-width="60" data-image-height="60"/></a>
+         <a class="nonblock nontext clip_frame grpelem" id="u20412" href="tel:(08)85225269"><!-- svg --><img class="svg" id="u20413" src="images/pasted-svg-109665x1093.svg?crc=4186153669" alt="" data-mu-svgfallback="images/pasted%20svg%20109665x109_poster_3.png?crc=4204566227" data-image-width="60" data-image-height="60"/></a>
+        </div>
        </div>
       </div>
      </div>
@@ -76,7 +80,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
     </div>
    </div>
    <div class="grpelem" id="u17434"><!-- custom html -->
-    <style>.embed-container { position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; max-width: 100%; } .embed-container iframe, .embed-container object, .embed-container embed { position: absolute; top: 0; left: 0; width: 100%; height: 100%; }</style><div class='embed-container'><iframe src='https://www.youtube.com/embed/3zlzdpi46EU' frameborder='0' allowfullscreen></iframe></div>
+    <iframe src="https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2Fgawlerunitingchurch%2Fvideos%2F1532637536746724%2F&width=305&show_text=false&height=176&appId" width="305" height="176" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true"></iframe>
    </div>
    <div class="clearfix grpelem" id="pu5460"><!-- column -->
     <div class="clearfix colelem" id="u5460"><!-- group -->
@@ -114,9 +118,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
    </div>
    <!-- /m_editable -->
    <div class="verticalspacer" data-offset-top="641" data-content-above-spacer="640" data-content-below-spacer="80"></div>
-   <div class="rounded-corners clearfix grpelem" id="u5290-4"><!-- content -->
-    <p id="u5290-2">RETURN HOME</p>
-   </div>
+   <a class="nonblock nontext rounded-corners clearfix grpelem" id="u5290-4" href="index.html" data-href="page:U782"><!-- content --><p id="u5290-2">RETURN HOME</p></a>
   </div>
   <!-- Other scripts -->
   <script type="text/javascript">
@@ -129,7 +131,7 @@ window.Muse.assets.check($);/* body */
 Muse.Utils.transformMarkupToFixBrowserProblemsPreInit();/* body */
 Muse.Utils.prepHyperlinks(true);/* body */
 Muse.Utils.fullPage('#page');/* 100% height page */
-Muse.Utils.initWidget('#pamphletu20396', ['#bp_infinity'], function(elem) { return new WebPro.Widget.ContentSlideShow(elem, {contentLayout_runtime:'stack',event:'click',deactivationEvent:'mouseout_both',autoPlay:false,displayInterval:3000,transitionStyle:'fading',transitionDuration:500,hideAllContentsFirst:true,shuffle:false,enableSwipe:true,resumeAutoplay:true,resumeAutoplayInterval:3000,playOnce:false,autoActivate_runtime:false}); });/* #pamphletu20396 */
+Muse.Utils.initWidget('#pamphletu20396', ['#bp_infinity'], function(elem) { return new WebPro.Widget.ContentSlideShow(elem, {contentLayout_runtime:'stack',event:'click',deactivationEvent:'mouseout_trigger',autoPlay:false,displayInterval:3000,transitionStyle:'fading',transitionDuration:500,hideAllContentsFirst:true,shuffle:false,enableSwipe:true,resumeAutoplay:true,resumeAutoplayInterval:3000,playOnce:false,autoActivate_runtime:false}); });/* #pamphletu20396 */
 Muse.Utils.showWidgetsWhenReady();/* body */
 Muse.Utils.transformMarkupToFixBrowserProblems();/* body */
 }catch(b){if(b&&"function"==typeof b.notify?b.notify():Muse.Assert.fail("Error calling selector function: "+b),false)throw b;}})})};
