--- a/events.html
+++ b/events.html
@@ -17,12 +17,12 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <title>Events</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=3866580668"/>
-  <link rel="stylesheet" type="text/css" href="css/master_master.css?crc=514636540"/>
-  <link rel="stylesheet" type="text/css" href="css/events.css?crc=4129563951" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_master.css?crc=338000515"/>
+  <link rel="stylesheet" type="text/css" href="css/events.css?crc=102763383" id="pagesheet"/>
   <!-- IE-only CSS -->
   <!--[if lt IE 9]>
   <link rel="stylesheet" type="text/css" href="css/nomq_preview_master_master.css?crc=3824530138"/>
-  <link rel="stylesheet" type="text/css" href="css/nomq_events.css?crc=3981493180" id="nomq_pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/nomq_events.css?crc=450697015" id="nomq_pagesheet"/>
   <![endif]-->
   <!-- Other scripts -->
   <script type="text/javascript">
@@ -33,7 +33,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
    document.write('\x3Cscript src="' + (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//webfonts.creativecloud.com/open-sans:n4:default;abel:n4:default.js" type="text/javascript">\x3C/script>');
 </script>
   <script type="text/javascript">
-   document.write('\x3Cscript src="' + (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//use.typekit.net/ik/RgBvXfd_jAtZ1etNvWGECJ3hi8qntNgzjhkyj67gNUJfenjgfO-IbgJGwQMX5QIXw8vDwAwoFR6U5AsKZAmRFRSDZAZq52qajQbujh9DFA485sTKHKoKjAFnSasyZh90ZhBademkiAoTie80ZkozScS0jW9CjcBR-aFXjAi8OciyihU8S1m0-WsTdcS0da41OcBuOYiaikoKjAFnSasyZh90ZhBademkiAoTie80ZkozScS0jW9KfAZTScIlShB0SkGHfFczMsMMeMb6MqGIQWmDZZMgRx_t3b9.js" type="text/javascript">\x3C/script>');
+   document.write('\x3Cscript src="' + (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//use.typekit.net/ik/aTbXvmUXDex56PCPDbnEqyTnlCxPRuJss1MGDv6a5qvfenjgfO-IbgJGwQMX5QIXw8vDwAwoFR6U5AsKZAmRFRSDZAZq52qajQbujh9DFA485sTKHKoKjAFnSasyZh90ZhBademkiAoTie80ZkozScS0jW9CjcBR-aFXjAi8OciyihU8S1m0-WsTdcS0da41OcBuOYiaikoKjAFnSasyZh90ZhBademkiAoTie80ZkozScS0jW9KfAZTScIlShB0SkGHfFczMsMMeMb6MqGIQWmDZZMgtrWo3b9.js" type="text/javascript">\x3C/script>');
 </script>
   <!-- Other scripts -->
   <script type="text/javascript">
@@ -56,20 +56,24 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      </div>
      <div class="popup_anchor" id="u20403popup">
       <div class="ContainerGroup clearfix" id="u20403"><!-- stack box -->
-       <div class="Container invi clearfix grpelem" id="u20404"><!-- column -->
-        <div class="museBGSize clearfix colelem shared_content" id="u20416-3" data-content-guid="u20416-3_content"><!-- content -->
-         <p>&nbsp;</p>
+       <div class="Container invi clearfix grpelem" id="u20404"><!-- group -->
+        <div class="clearfix grpelem shared_content" id="pu20416-3" data-content-guid="pu20416-3_content"><!-- column -->
+         <div class="museBGSize clearfix colelem" id="u20416-3"><!-- content -->
+          <p>&nbsp;</p>
+         </div>
+         <a class="nonblock nontext clearfix colelem" id="u22578-4" href="featured.html" data-href="page:U19221"><!-- content --><p id="u22578-2">FEATURED</p></a>
+         <a class="nonblock nontext clip_frame colelem" id="u20414" href="http://gawleruniting.org.au"><!-- svg --><img class="svg temp_no_img_src" id="u20415" data-orig-src="images/pasted-svg-109665x109.svg?crc=3939634654" alt="" data-mu-svgfallback="images/pasted%20svg%20109665x109_poster_.png?crc=4011030576" data-image-width="60" data-image-height="60" src="images/blank.gif?crc=4208392903"/></a>
         </div>
-        <a class="nonblock nontext clearfix colelem shared_content" id="u20408-4" href="bible-readings.html" data-href="page:U7278" data-content-guid="u20408-4_content"><!-- content --><p id="u20408-2">READINGS</p></a>
-        <a class="nonblock nontext clearfix colelem shared_content" id="u20410-4" href="sermon.html" data-href="page:U5450" data-content-guid="u20410-4_content"><!-- content --><p id="u20410-2">SERMONS</p></a>
-        <a class="nonblock nontext clearfix colelem shared_content" id="u20417-4" href="discipleship.html" data-href="page:U5578" data-content-guid="u20417-4_content"><!-- content --><p id="u20417-2">DISCIPLESHIP</p></a>
-        <a class="nonblock nontext MuseLinkActive clearfix colelem shared_content" id="u20411-4" href="events.html" data-href="page:U5505" data-content-guid="u20411-4_content"><!-- content --><p id="u20411-2">EVENTS</p></a>
-        <a class="nonblock nontext clearfix colelem shared_content" id="u20405-4" href="openlife.html" data-href="page:U5698" data-content-guid="u20405-4_content"><!-- content --><p id="u20405-2">OPENLIFE</p></a>
-        <a class="nonblock nontext clearfix colelem shared_content" id="u20409-4" href="featured.html" data-href="page:U19221" data-content-guid="u20409-4_content"><!-- content --><p id="u20409-2">FEATURED</p></a>
-        <div class="clearfix colelem shared_content" id="pu20414" data-content-guid="pu20414_content"><!-- group -->
-         <a class="nonblock nontext clip_frame grpelem" id="u20414" href="http://gawleruniting.org.au"><!-- svg --><img class="svg temp_no_img_src" id="u20415" data-orig-src="images/pasted-svg-109665x109.svg?crc=3939634654" alt="" data-mu-svgfallback="images/pasted%20svg%20109665x109_poster_.png?crc=4011030576" data-image-width="60" data-image-height="60" src="images/blank.gif?crc=4208392903"/></a>
-         <a class="nonblock nontext clip_frame grpelem" id="u20406" href="https://www.facebook.com/gawlerunitingchurch"><!-- svg --><img class="svg temp_no_img_src" id="u20407" data-orig-src="images/pasted-svg-109665x1092.svg?crc=223350899" alt="" data-mu-svgfallback="images/pasted%20svg%20109665x109_poster_2.png?crc=4111301327" data-image-width="60" data-image-height="60" src="images/blank.gif?crc=4208392903"/></a>
-         <a class="nonblock nontext clip_frame grpelem" id="u20412" href="tel:(08)85225269"><!-- svg --><img class="svg temp_no_img_src" id="u20413" data-orig-src="images/pasted-svg-109665x1093.svg?crc=4186153669" alt="" data-mu-svgfallback="images/pasted%20svg%20109665x109_poster_3.png?crc=4204566227" data-image-width="60" data-image-height="60" src="images/blank.gif?crc=4208392903"/></a>
+        <a class="nonblock nontext clearfix grpelem shared_content" id="u20408-4" href="bible-readings.html" data-href="page:U7278" data-content-guid="u20408-4_content"><!-- content --><p id="u20408-2">READINGS</p></a>
+        <div class="clearfix grpelem shared_content" id="pu22548-4" data-content-guid="pu22548-4_content"><!-- column -->
+         <a class="nonblock nontext clearfix colelem" id="u22548-4" href="sermon.html" data-href="page:U5450"><!-- content --><p id="u22548-2">SERMONS</p></a>
+         <a class="nonblock nontext clearfix colelem" id="u22554-4" href="discipleship.html" data-href="page:U5578"><!-- content --><p id="u22554-2">DISCIPLESHIP</p></a>
+         <a class="nonblock nontext MuseLinkActive clearfix colelem" id="u22560-4" href="events.html" data-href="page:U5505"><!-- content --><p id="u22560-2">EVENTS</p></a>
+         <a class="nonblock nontext clearfix colelem" id="u22572-4" href="openlife.html" data-href="page:U5698"><!-- content --><p id="u22572-2">OPENLIFE</p></a>
+         <div class="clearfix colelem" id="pu20406"><!-- group -->
+          <a class="nonblock nontext clip_frame grpelem" id="u20406" href="https://www.facebook.com/gawlerunitingchurch"><!-- svg --><img class="svg temp_no_img_src" id="u20407" data-orig-src="images/pasted-svg-109665x1092.svg?crc=223350899" alt="" data-mu-svgfallback="images/pasted%20svg%20109665x109_poster_2.png?crc=4111301327" data-image-width="60" data-image-height="60" src="images/blank.gif?crc=4208392903"/></a>
+          <a class="nonblock nontext clip_frame grpelem" id="u20412" href="tel:(08)85225269"><!-- svg --><img class="svg temp_no_img_src" id="u20413" data-orig-src="images/pasted-svg-109665x1093.svg?crc=4186153669" alt="" data-mu-svgfallback="images/pasted%20svg%20109665x109_poster_3.png?crc=4204566227" data-image-width="60" data-image-height="60" src="images/blank.gif?crc=4208392903"/></a>
+         </div>
         </div>
        </div>
       </div>
@@ -81,12 +85,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
       </div>
      </div>
     </div>
-    <div class="clearfix grpelem" id="pu5482-4"><!-- column -->
-     <!-- m_editable region-id="editable-static-tag-U5482-BP_infinity" template="events.html" data-type="html" data-ice-options="disableImageResize,link" -->
-     <div class="Title clearfix colelem shared_content" id="u5482-4" data-muse-uid="U5482" data-muse-type="txt_frame" data-content-guid="u5482-4_content"><!-- content -->
-      <h1>UPCOMING EVENTS</h1>
-     </div>
-     <!-- /m_editable -->
+    <div class="clearfix grpelem" id="pu8225"><!-- column -->
      <!-- m_editable region-id="editable-static-tag-U8225" template="events.html" data-type="html" data-ice-options="clickable" data-ice-editable="link" -->
      <a class="nonblock nontext museBGSize colelem shared_content" id="u8225" href="https://www.facebook.com/events/726313117472467/" data-muse-uid="U8225" data-content-guid="u8225_content"><!-- simple frame --></a>
      <!-- /m_editable -->
@@ -95,11 +94,16 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      <!-- /m_editable -->
     </div>
     <a class="anchor_item grpelem shared_content" id="top" data-content-guid="top_content"></a>
-    <div class="grpelem shared_content" id="u6188" data-content-guid="u6188_content"><!-- simple frame --></div>
-    <div class="verticalspacer" data-offset-top="484" data-content-above-spacer="484" data-content-below-spacer="80"></div>
-    <div class="rounded-corners clearfix grpelem shared_content" id="u5290-4" data-content-guid="u5290-4_content"><!-- content -->
-     <p id="u5290-2">RETURN HOME</p>
+    <div class="clearfix grpelem" id="pu5482-4"><!-- column -->
+     <!-- m_editable region-id="editable-static-tag-U5482-BP_infinity" template="events.html" data-type="html" data-ice-options="disableImageResize,link" -->
+     <div class="Title clearfix colelem shared_content" id="u5482-4" data-muse-uid="U5482" data-muse-type="txt_frame" data-content-guid="u5482-4_content"><!-- content -->
+      <h1>UPCOMING EVENTS</h1>
+     </div>
+     <!-- /m_editable -->
+     <div class="colelem shared_content" id="u6188" data-content-guid="u6188_content"><!-- simple frame --></div>
     </div>
+    <div class="verticalspacer" data-offset-top="484" data-content-above-spacer="484" data-content-below-spacer="80"></div>
+    <a class="nonblock nontext rounded-corners clearfix grpelem shared_content" id="u5290-4" href="index.html" data-href="page:U782" data-content-guid="u5290-4_content"><!-- content --><p id="u5290-2">RETURN HOME</p></a>
    </div>
   </div>
   <div class="breakpoint" id="bp_380" data-max-width="380"><!-- responsive breakpoint node -->
@@ -116,15 +120,10 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      </div>
      <div class="popup_anchor temp_no_id" data-orig-id="u20403popup">
       <div class="ContainerGroup clearfix temp_no_id" data-orig-id="u20403"><!-- stack box -->
-       <div class="Container invi clearfix grpelem temp_no_id" data-orig-id="u20404"><!-- column -->
-        <span class="museBGSize clearfix colelem placeholder" data-placeholder-for="u20416-3_content"><!-- placeholder node --></span>
-        <span class="nonblock nontext clearfix colelem placeholder" data-placeholder-for="u20408-4_content"><!-- placeholder node --></span>
-        <span class="nonblock nontext clearfix colelem placeholder" data-placeholder-for="u20410-4_content"><!-- placeholder node --></span>
-        <span class="nonblock nontext clearfix colelem placeholder" data-placeholder-for="u20417-4_content"><!-- placeholder node --></span>
-        <span class="nonblock nontext MuseLinkActive clearfix colelem placeholder" data-placeholder-for="u20411-4_content"><!-- placeholder node --></span>
-        <span class="nonblock nontext clearfix colelem placeholder" data-placeholder-for="u20405-4_content"><!-- placeholder node --></span>
-        <span class="nonblock nontext clearfix colelem placeholder" data-placeholder-for="u20409-4_content"><!-- placeholder node --></span>
-        <span class="clearfix colelem placeholder" data-placeholder-for="pu20414_content"><!-- placeholder node --></span>
+       <div class="Container invi clearfix grpelem temp_no_id" data-orig-id="u20404"><!-- group -->
+        <span class="clearfix grpelem placeholder" data-placeholder-for="pu20416-3_content"><!-- placeholder node --></span>
+        <span class="nonblock nontext clearfix grpelem placeholder" data-placeholder-for="u20408-4_content"><!-- placeholder node --></span>
+        <span class="clearfix grpelem placeholder" data-placeholder-for="pu22548-4_content"><!-- placeholder node --></span>
        </div>
       </div>
      </div>
@@ -149,7 +148,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
     </div>
     <span class="anchor_item grpelem placeholder" data-placeholder-for="top_content"><!-- placeholder node --></span>
     <div class="verticalspacer" data-offset-top="484" data-content-above-spacer="484" data-content-below-spacer="80"></div>
-    <span class="rounded-corners clearfix grpelem placeholder" data-placeholder-for="u5290-4_content"><!-- placeholder node --></span>
+    <span class="nonblock nontext rounded-corners clearfix grpelem placeholder" data-placeholder-for="u5290-4_content"><!-- placeholder node --></span>
    </div>
   </div>
   <!-- Other scripts -->
@@ -163,7 +162,7 @@ window.Muse.assets.check($);/* body */
 Muse.Utils.transformMarkupToFixBrowserProblemsPreInit();/* body */
 Muse.Utils.prepHyperlinks(true);/* body */
 Muse.Utils.fullPage('#page');/* 100% height page */
-Muse.Utils.initWidget('#pamphletu20396', ['#bp_infinity', '#bp_380'], function(elem) { return new WebPro.Widget.ContentSlideShow(elem, {contentLayout_runtime:'stack',event:'click',deactivationEvent:'mouseout_both',autoPlay:false,displayInterval:3000,transitionStyle:'fading',transitionDuration:500,hideAllContentsFirst:true,shuffle:false,enableSwipe:true,resumeAutoplay:true,resumeAutoplayInterval:3000,playOnce:false,autoActivate_runtime:false}); });/* #pamphletu20396 */
+Muse.Utils.initWidget('#pamphletu20396', ['#bp_infinity', '#bp_380'], function(elem) { return new WebPro.Widget.ContentSlideShow(elem, {contentLayout_runtime:'stack',event:'click',deactivationEvent:'mouseout_trigger',autoPlay:false,displayInterval:3000,transitionStyle:'fading',transitionDuration:500,hideAllContentsFirst:true,shuffle:false,enableSwipe:true,resumeAutoplay:true,resumeAutoplayInterval:3000,playOnce:false,autoActivate_runtime:false}); });/* #pamphletu20396 */
 $( '.breakpoint' ).registerBreakpoint();/* Register breakpoints */
 Muse.Utils.transformMarkupToFixBrowserProblems();/* body */
 }catch(b){if(b&&"function"==typeof b.notify?b.notify():Muse.Assert.fail("Error calling selector function: "+b),false)throw b;}})})};
